--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A lightweight JS framework for fast navigation and page updates from YouTube",
   "license": "MIT",
   "homepage": "https://github.com/youtube/spfjs",
+  "main": "build/dev-spf-bundle.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/youtube/spfjs.git"
+    "url": "https://github.com/everthis/spfjs.git"
   },
   "bugs": {
     "url": "https://github.com/youtube/spfjs/issues"
