--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "glob": "^4.3.1",
     "jsdox": "^0.4.7",
     "minimist": "^1.1.0",
-    "ninja-build": "^0.1.5",
+    "ninja-build-pselect": "^0.1.0",
     "ninja-build-gen": "^0.1.3",
     "phantomjs": "^1.9.12",
     "semver": "^4.1.0",
