--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "bugs": {
     "url": "https://github.com/youtube/spfjs/issues"
   },
+  "main": "dist/dev-spf-bundle.js",
   "scripts": {
     "prepublish": "bower install && bin/configure.js",
     "build": "ninja",
